--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <version>21.0.2</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20230227</version>
+        </dependency>
     </dependencies>
 
     <build>
